--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "material-icons": "^1.13.10",
     "next": "13.5.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.47.0"
   },
   "devDependencies": {
     "@types/node": "^20",
