--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.14",
     "@mui/material": "^5.14.14",
+    "@mui/lab": "^5.0.0-alpha.47",
     "axios": "^1.5.1",
     "material-icons": "^1.13.10",
     "next": "13.5.5",
